--- a/client/src/index.html
+++ b/client/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Image Edit</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
   </head>
   <body>
     <div id="content"></div>
