filter image and show new one fixed #12 #13 #14

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html class="full-height">
   <head>
     <meta charset="UTF-8" />
     <title>Image Edit</title>
     <link rel="stylesheet" type="text/css" href="css/main.css" />
   </head>
-  <body>
-    <div id="content"></div>
-    
+  <body class="full-height">
+    <div id="content" class="full-height"></div>
+
     <script src="js/vendor.js"></script>
     <script src="js/main.js"></script>
   </body>
